Agregando botón plan y emepezando last exp filtro

--- a/plan.html
+++ b/plan.html
@@ -66,6 +66,7 @@
 			<h3 class="col-s-12 col-4">Destination:</h3>
 			<input class="col-s-10 col-8" type="text" name="destination" class="col-s-10">
 		</article>
+		<button id="search-btn">SEARCH</button>
 	</section>
 	<!-- ----------FOOTER----------- -->
 	<footer class="clearfix">
