--- a/experience_bali.html
+++ b/experience_bali.html
@@ -63,41 +63,41 @@
 	</section>
 	<!-- MAIN SECTION -->
 	<section id=main-sect>
-		<h1> Trip to the Cies Islands - Vigo </h1>
-		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/cies main img.png">
+		<h1> Sacred Moneky Forest - Bali </h1>
+		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/bali main img.png">
 		<div id='interests' class="col-s-12 col-t-11 col-9">
-			<div class="interest"><p>Islands</p></div>
+			<div class="interest"><p>Exotic</p></div>
 			<div class="interest"><p>Beach</p></div>
 		</div>
 		<article id='location-budget' class="col-s-12 col-t-11 col-8">
-			<h3>Location: Vigo - Spain</h3>
-			<h3>Approximate budget: 50€</h3>
+			<h3>Location: Bali - Indonesia</h3>
+			<h3>Approximate budget: 250€</h3>
 		</article>
 		<article id=description class='col-s-11 col-t-10 col-8'>
-			<p>Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San Martiño. The first two are linked by the sandy area of Playa de Rodas and a breakwater. The Cíes Islands were declared a Natural Park in 1980 and included in the National Park of the Atlantic Islands of Galicia created in 2002.<p/>
+			<p>Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary.<p/>
 			<br>
-			<p>The Cíes Islands promise the visitor an excellent excursion in a highly protected natural space to fully enjoy nature. In this unspoiled paradise we can highlight the Rodas Beach, awarded the title of “The Best Beach in the World” by the renowned British newspaper “The Guardian”. It is worth coming and touring the islands, visiting the beaches and enjoying nature in one of the few Virgin Paradises that we have left on earth.</p>
+			<p>The Monkey Forest Ubud has 186 species of plants and trees in 12,5 hectares of forest. The Monkey Forest Ubud has 3 temples, namely Dalem Agung Padangtegal Temple, Holy Spring Temple and Prajapati Temple. </p>
 		</article>
 		<section id="media" class="col-s-12 col-t-11 col-9">
 			<article id="images">
 	            <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
 	            <div class="col-s-8 col-t-9 col-10">
-	              <img id='img1' class="obj1 ex-img col-s-12 col-t-5" src="images/cies_pic_1.png" alt="">
-	              <img id='img2' class="obj2 ex-img col-s-12 col-t-5" src="images/cies_pic_2.png" alt="">
-	              <img id='img3' class="obj3 ex-img col-s-12 col-t-5" src="images/cies_pic_3.png" alt="">
-	              <img id='img4' class="obj4 ex-img col-s-12 col-t-5" src="images/cies_pic_4.png" alt="">
-	              <img id='img5' class="obj5 ex-img col-s-12 col-t-5" src="images/cies_pic_5.png" alt="">
+	              <img id='img1' class="obj1 ex-img col-s-12 col-t-5" src="images/bali_pic_1.png" alt="">
+	              <img id='img2' class="obj2 ex-img col-s-12 col-t-5" src="images/bali_pic_2.png" alt="">
+	              <img id='img3' class="obj3 ex-img col-s-12 col-t-5" src="images/bali_pic_3.png" alt="">
+	              <img id='img4' class="obj4 ex-img col-s-12 col-t-5" src="images/bali_pic_4.png" alt="">
+	              <img id='img5' class="obj5 ex-img col-s-12 col-t-5" src="images/bali_pic_5.png" alt="">
 	            </div>
 	            <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
 	        </article>
 	        <article id="videos">
 		        <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
 		        <div class="col-s-8 col-t-9 col-10">
-			        <iframe id="vid1" class="obj1 col-s-12 col-t-5" src="https://www.youtube.com/embed/fX6Aj4tKzhA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid2" class="obj2 col-s-12 col-t-5" src="https://www.youtube.com/embed/2XjxZjzfwjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid3" class="obj3 col-s-12 col-t-5" src="https://www.youtube.com/embed/w5WvDwFy3ZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid4" class="obj4 col-s-12 col-t-5" src="https://www.youtube.com/embed/Sh028LKdGZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid5" class="obj5 col-s-12 col-t-5" src="https://www.youtube.com/embed/yCEDeVb11HU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			        <iframe id="vid1" class="obj1 col-s-12 col-t-5" src="https://www.youtube.com/embed/CcsXiFOuNdA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="vid2" class="obj2 col-s-12 col-t-5" src="https://www.youtube.com/embed/3pvPXEeUux4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="vid3" class="obj3 col-s-12 col-t-5" src="https://www.youtube.com/embed/rgk3o2VX57k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="vid4" class="obj4 col-s-12 col-t-5" src="https://www.youtube.com/embed/z-SGIBaVRak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="vid5" class="obj5 col-s-12 col-t-5" src="https://www.youtube.com/embed/-hxXeLB84MY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		        </div>
 		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
 	      	</article>
