--- a/experience_prague.html
+++ b/experience_prague.html
@@ -63,41 +63,41 @@
 	</section>
 	<!-- MAIN SECTION -->
 	<section id=main-sect>
-		<h1> Trip to the Cies Islands - Vigo </h1>
-		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/cies main img.png">
+		<h1> City tour - Prague </h1>
+		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/prague main img.png">
 		<div id='interests' class="col-s-12 col-t-11 col-9">
-			<div class="interest"><p>Islands</p></div>
-			<div class="interest"><p>Beach</p></div>
+			<div class="interest"><p>City</p></div>
+			<div class="interest"><p>Europe</p></div>
 		</div>
 		<article id='location-budget' class="col-s-12 col-t-11 col-8">
-			<h3>Location: Vigo - Spain</h3>
-			<h3>Approximate budget: 50€</h3>
+			<h3>Location: Prague - Cheque Republic</h3>
+			<h3>Approximate budget: 150€</h3>
 		</article>
 		<article id=description class='col-s-11 col-t-10 col-8'>
-			<p>Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San Martiño. The first two are linked by the sandy area of Playa de Rodas and a breakwater. The Cíes Islands were declared a Natural Park in 1980 and included in the National Park of the Atlantic Islands of Galicia created in 2002.<p/>
+			<p>Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval Astronomical Clock, which gives an animated hourly show.<p/>
 			<br>
-			<p>The Cíes Islands promise the visitor an excellent excursion in a highly protected natural space to fully enjoy nature. In this unspoiled paradise we can highlight the Rodas Beach, awarded the title of “The Best Beach in the World” by the renowned British newspaper “The Guardian”. It is worth coming and touring the islands, visiting the beaches and enjoying nature in one of the few Virgin Paradises that we have left on earth.</p>
+			<p>Main attractions include Prague Castle, Charles Bridge, Old Town Square with the Prague astronomical clock, the Jewish Quarter, Petřín hill and Vyšehrad.</p>
 		</article>
 		<section id="media" class="col-s-12 col-t-11 col-9">
 			<article id="images">
 	            <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
 	            <div class="col-s-8 col-t-9 col-10">
-	              <img id='img1' class="obj1 ex-img col-s-12 col-t-5" src="images/cies_pic_1.png" alt="">
-	              <img id='img2' class="obj2 ex-img col-s-12 col-t-5" src="images/cies_pic_2.png" alt="">
-	              <img id='img3' class="obj3 ex-img col-s-12 col-t-5" src="images/cies_pic_3.png" alt="">
-	              <img id='img4' class="obj4 ex-img col-s-12 col-t-5" src="images/cies_pic_4.png" alt="">
-	              <img id='img5' class="obj5 ex-img col-s-12 col-t-5" src="images/cies_pic_5.png" alt="">
+	              <img id='img1' class="obj1 ex-img col-s-12 col-t-5" src="images/prague_pic_1.png" alt="">
+	              <img id='img2' class="obj2 ex-img col-s-12 col-t-5" src="images/prague_pic_2.png" alt="">
+	              <img id='img3' class="obj3 ex-img col-s-12 col-t-5" src="images/prague_pic_3.png" alt="">
+	              <img id='img4' class="obj4 ex-img col-s-12 col-t-5" src="images/prague_pic_4.png" alt="">
+	              <img id='img5' class="obj5 ex-img col-s-12 col-t-5" src="images/prague_pic_5.png" alt="">
 	            </div>
 	            <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
 	        </article>
 	        <article id="videos">
 		        <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
 		        <div class="col-s-8 col-t-9 col-10">
-			        <iframe id="vid1" class="obj1 col-s-12 col-t-5" src="https://www.youtube.com/embed/fX6Aj4tKzhA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid2" class="obj2 col-s-12 col-t-5" src="https://www.youtube.com/embed/2XjxZjzfwjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid3" class="obj3 col-s-12 col-t-5" src="https://www.youtube.com/embed/w5WvDwFy3ZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid4" class="obj4 col-s-12 col-t-5" src="https://www.youtube.com/embed/Sh028LKdGZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			        <iframe id="vid5" class="obj5 col-s-12 col-t-5" src="https://www.youtube.com/embed/yCEDeVb11HU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			        <iframe id="vid1" class="obj1 col-s-12 col-t-5" src="https://www.youtube.com/embed/idg6vW3vXtE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			        <iframe id="vid2" class="obj2 col-s-12 col-t-5" src="https://www.youtube.com/embed/87GfE07QZdc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			        <iframe id="vid3" class="obj3 col-s-12 col-t-5" src="https://www.youtube.com/embed/njFvp_JnJ2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe id="vid4" class="obj4 col-s-12 col-t-5" src="https://www.youtube.com/embed/tNJTWOUH8JE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			        <iframe id="vid5" class="obj5 col-s-12 col-t-5" src="https://www.youtube.com/embed/N4_ghWwdtMc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		        </div>
 		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
 	      	</article>
