experiences terminado sin popups

--- a/my_exp.html
+++ b/my_exp.html
@@ -75,7 +75,7 @@
 					</div>
 					<div class="experience-col">
 						<div class="img-remove">
-							<img src="images/cies_pic_5.png" alt="">
+							<img src="images/cies_pic_5.png" alt="" class="img-title">
 							<div class="remove-select">
 								<button type="button" name="remove-experience" class="remove" id="remove">x</button>
 								<label class="b-contain">
@@ -97,17 +97,17 @@
 					</div>
 				</article>
 			</article>
-			<button type="button" name="add-experience" id="add-exp" class="big-button col-s-7">Add Experience</button>
-			<button type="button" name="add-experience" id="new-coll" class="big-button col-s-7">New Collection</button>
+			<button type="button" name="add-experience" id="add-exp" class="big-button col-s-7 col-t-4 col-4">Add Experience</button>
+			<button type="button" name="add-experience" id="new-coll" class="big-button col-s-7 col-t-4 col-4">New Collection</button>
 			<h2>My Collections</h2>
-			<article class="exp-coll" id="block-1">
+			<article class="exp-coll col-s-11" id="block-2">
 				<p id="no-collections">You currently have no collections. <br>
 				Create a new collection by selecting experiences</p>
-				<article class="experience-col col-s-8" id="default-collection">
+				<article class="experience-col collection" id="default-collection">
 					<div class="img-remove">
-						<img src="images/cies_pic_5.png" alt="" class="side-img">
+						<img src="images/cies_pic_5.png" alt="" class="side-img-1">
 						<img src="images/cies_pic_5.png" alt="" class="center-img">
-						<img src="images/cies_pic_5.png" alt="" class="side-img">
+						<img src="images/cies_pic_5.png" alt="" class="side-img-2">
 						<div class="remove-select">
 							<button type="button" name="remove-collection" class="remove" id="remove-coll">x</button>
 						</div>
@@ -121,20 +121,20 @@
 	</section>
 
 	<footer class="clearfix">
-		<div id='footer-main' class='col-t-12 col-s-12 col-12'>
+		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
 			<img id='footer-logo' src="images/logo.png">
-			<h2 class='col-s-5' id='footer-title'>Travelust</h2>
+			<h2 id='footer-title'>Travelust</h2>
 		</div>
 
-		<div id="footer-text" class='col-t-12 col-s-12 col-12'>
-			<p id="footer c">© 2021 Travelust</p>
-			<p id="privacy button">Privacy policy</p>
+		<div id="footer-text" class='col-t-8 col-s-12'>
+			<div id="footer c">© 2021 Travelust</div>
+			<a href="privacy_policy.html">Privacy policy</a>
 		</div>
 
-		<div id="footer-images" class='col-t-16 col-s-16 col-16'>
-			<img class="images-app" src="images/youtube%202.png">
-			<img class=" images-app" src="images/twitter%201.png">
-			<img class="images-app" src="images/instagram%202.png">
+		<div id="footer-images" class='col-t-4 col-s-16 col-3'>
+			<a href=""><img src="images/youtube%202.png"></a>
+			<a href=""><img src="images/twitter%201.png"></a>
+			<a href=""><img src="images/instagram%202.png"></a>
 		</div>
 	</footer>
 
