--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 						<h1>Username</h1>
 						<input type = "text"  id="username">
 						<h1>Email address</h1>
-						<input type = "text"  id="email">
+						<input type = "email"  id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]">
 						<h1>Password</h1>
-						<input type = "text"  id="password">
+						<input type = "password"  id="password"  pattern="[a-z0-9]{0,8}">
 						<h1>Confirm your password</h1>
-						<input type = "text"  id="password-confirm">
+						<input type = "password"  id="password-confirm"  pattern="[a-z0-9]{0,8}">
 						<h1>New interest</h1>
 						<input type = "text"  id="interest">
 						<button class="id-button" id = "select">Save selection</button>
