--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
 			<button type="button" name="exit" class="exit-button">x</button>
 		</div>
 		<div class="inputs">
-			<form id="change-things">
+			<form class="profile-info">
 				<label for="username">New Username</label>
 				<input type="text" name="username" value="" class="input-modify col-s-8" id="form-username">
 				<label for="email">New Email Address</label>
@@ -62,7 +62,7 @@
 			<button type="button" name="exit" class="exit-button">x</button>
 		</div>
 		<div class="inputs">
-			<form id="change-things">
+			<form class="profile-info">
 
 				<button type="submit" name="change-ints" id="submit-mod" class="submit-but col-s-3">Submit</button>
 			</form>
@@ -155,5 +155,6 @@
       <img class="images-app" src="images/instagram%202.png">
     </div>
   </footer>
+</body>
 </html>
 <script src="script/profile.js" charset="utf-8"></script>
