--- a/last_experiences.html
+++ b/last_experiences.html
@@ -52,11 +52,11 @@
 		<nav id=filters class="col-s-11">
 			<div class = filter>
 				<p>filter 1</p>
-				<button class="delete-filter">x</button>
+				<button onclick="deleteFilter(this)" class="delete-filter">x</button>
 			</div>
 			<div class = filter>
 				<p>filter 2</p>
-				<button class="delete-filter">x</button>
+				<button onclick="deleteFilter(this)" class="delete-filter">x</button>
 			</div>
 		</nav>
 		<section class="experiences">
