--- a/my_exp.html
+++ b/my_exp.html
@@ -14,6 +14,110 @@
 	<title>Travelust</title>
 </head>
 <body>
+	<article class="popup col-s-10 col-t-10 col-9" id="add-experiencee">
+		<div class="title-exit">
+			<h3>Add Experience</h3>
+			<button type="button" name="exit" class="exit-button">x</button>
+		</div>
+		<div class="inputs">
+			<form id="create-exp">
+				<div class="grid">
+					<label for="name">Name</label>
+					<input type="text" name="username" value="" class="input-exp col-s-11 col-t-11 col-11" id="form-name">
+					<label for="Description">Description</label>
+					<input type="text" name="email" value="" class="input-exp col-s-11 col-t-11 col-11" id="form-description">
+					<label for="location">Location</label>
+					<input type="text" name="birth" class="input-exp col-s-11 col-t-11 col-11" id="form-location">
+				</div>
+				<div id="input-smaller">
+					<div class="sub-in col-s-9 col-t-9 col-9" id="in-1-1">
+						<label for="budget">Budget</label>
+						<input type="number" name="budget" value="" class="input-exp col-s-6 col-t-6 col-6" id="form-budget">
+					</div>
+					<div class="sub-in col-s-9 col-t-9 col-9" id="in-2-2">
+						<label for="inter" class="label-int">Interest 1</label>
+						<select name="inter" id="new-interest-1" class="col-s-7 col-t-7 col-7">
+							<option selected disabled hidden></option>
+							<option value="beach">Beach</option>
+							<option value="exotic">Exotic</option>
+							<option value="city">City</option>
+							<option value="rurope">Europe</option>
+							<option value="africa">Africa</option>
+							<option value="america">America</option>
+							<option value="asia">Asia</option>
+							<option value="forest">Forest</option>
+							<option value="islands">Islands</option>
+							<option value="budhist">Budhist</option>
+							<option value="religious">Religious</option>
+						</select>
+					</div>
+					<div class="sub-in col-s-9 col-t-9 col-9" id="in-3-3">
+						<label for="inter" class="label-int">Interest 2</label>
+						<select name="inter" id="new-interest-2" class="col-s-7 col-t-7 col-7">
+							<option selected disabled hidden></option>
+							<option value="beach">Beach</option>
+							<option value="exotic">Exotic</option>
+							<option value="city">City</option>
+							<option value="rurope">Europe</option>
+							<option value="africa">Africa</option>
+							<option value="america">America</option>
+							<option value="asia">Asia</option>
+							<option value="forest">Forest</option>
+							<option value="islands">Islands</option>
+							<option value="budhist">Budhist</option>
+							<option value="religious">Religious</option>
+						</select>
+					</div>
+				</div>
+				<label for="image" class="custom-file-upload col-s-10 col-t-10 col-10" id="input-label">
+					<input type="file" class="hidden" name="image"/>
+				  <p class="col-s-7 col-t-7 col-7">Select Image</p>
+				</label>
+				<button type="submit" name="modify-prof" id="submit-mod" class="submit-but col-s-3 col-t-3 col-3">Submit</button>
+			</form>
+		</div>
+	</article>
+
+	<article class="popup col-s-10 col-t-9 col-8" id="create-col">
+		<div class="title-exit">
+			<h3>Create Collection</h3>
+			<button type="button" name="exit" class="exit-button">x</button>
+		</div>
+		<div class="col-s-8 col-t-8 col-8" id="selected-exp">
+			<p class="small-title">Selected Experiences</p>
+			<p class="col-s-12" id="selected-experiences-p">Default Experience</p>
+		</div>
+		<form class="inputs col-s-8 col-t-8 col-8" id="new-collection">
+			<label class="small-title" for="coll-name">Collection name:</label>
+			<input type="text" name="coll-name" value="" id="input-new-col">
+			<button type="submit" name="add-collection-but" id="submit-coll" class="submit-but col-s-3 col-t-3 col-3">Submit</button>
+		</form>
+	</article>
+
+	<article class="popup col-s-10 col-t-9 col-8" id="delete-exp">
+		<div class="title-exit">
+			<h3>Delete Experience</h3>
+			<button type="button" name="exit" class="exit-button">x</button>
+		</div>
+		<p class="question">Are you sure you want to delete this experience?</p>
+		<form class="yes-no col-s-11 col-t-11 col-11">
+			<button type="button" name="no-exp" id="no-but" class="submit-but col-s-3 col-t-3 col-3">No</button>
+			<button type="submit" name="yes-exp" id="yes-exp" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
+		</form>
+	</article>
+
+	<article class="popup col-s-10 col-t-9 col-8" id="delete-coll">
+		<div class="title-exit">
+			<h3>Delete Collection</h3>
+			<button type="button" name="exit" class="exit-button">x</button>
+		</div>
+		<p class="question">Are you sure you want to delete this collection?</p>
+		<form class="yes-no col-s-11 col-t-11 col-11">
+			<button type="button" name="no-coll" id="no-but" class="submit-but col-s-3 col-t-3 col-3">No</button>
+			<button type="submit" name="yes-coll" id="yes-col" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
+		</form>
+	</article>
+
 	<header class="clearfix">
 		<div id='header-main' class='col-t-12 col-s-12 col-12'>
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
@@ -77,7 +181,7 @@
 						<div class="img-remove">
 							<img src="images/cies_pic_5.png" alt="" class="img-title">
 							<div class="remove-select">
-								<button type="button" name="remove-experience" class="remove" id="remove">x</button>
+								<button type="button" name="remove-experience" class="remove-exp" id="remove">x</button>
 								<label class="b-contain">
 									<input type="checkbox">
 									<div class="b-input"></div>
@@ -97,8 +201,8 @@
 					</div>
 				</article>
 			</article>
-			<button type="button" name="add-experience" id="add-exp" class="big-button col-s-7 col-t-4 col-4">Add Experience</button>
-			<button type="button" name="add-experience" id="new-coll" class="big-button col-s-7 col-t-4 col-4">New Collection</button>
+			<button type="button" name="add-experien" id="add-exp" class="big-button col-s-7 col-t-4 col-4">Add Experience</button>
+			<button type="button" name="add-collect" id="new-coll" class="big-button col-s-7 col-t-4 col-4">New Collection</button>
 			<h2>My Collections</h2>
 			<article class="exp-coll col-s-11" id="block-2">
 				<p id="no-collections">You currently have no collections. <br>
@@ -140,3 +244,4 @@
 
 </body>
 </html>
+<script src="script/my_exp.js" charset="utf-8"></script>
