--- a/experience_bali.html
+++ b/experience_bali.html
@@ -40,6 +40,18 @@
 			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>
 	</header>
+	<ul id="myList" class="col-4">
+		<li><a href="last_experiences.html">Experiences</a></li>
+		<li><a href="top_users.html">Users</a></li>
+		<li><a href="experience_bali.html">Sacred monkey forest, Bali</a></li>
+		<li><a href="experience_prague.html">City tour, Prague</a></li>
+		<li><a href="experience_cies.html">Trip to Cies islands, Vigo</a></li>
+		<li><a href="about_us.html">About us</a></li>
+		<li><a href="privacy_policy.html">Privacy policy, terms, conditions</a></li>
+		<li><a href="index.html">Home, main page</a></li>
+		<li><a href="index.html">Map</a></li>
+		<li><a href="plan.html">Plan a trip</a></li>
+	</ul>
 	<!-- ----------END HEADER----------- -->
 
 	<!-- ----------POP UPS----------- -->
