--- a/profile.html
+++ b/profile.html
@@ -12,35 +12,47 @@
 </head>
 <body>
 
-<!-- ----------HEADER----------- -->
+	<!-- ----------HEADER----------- -->
 
-<header class="clearfix">
-	<div id='header-main' class='col-t-12 col-s-12 col-12'>
-		<img class='col-s-2' id='show-menu' src="images/show-menu.png">
-		<img class="col-s-2 col-3" id='logo' src="images/logo.png">
-		<h2 class='col-s-5 col-6' id='head-title'>Travelust</h2>
-		<nav class='col-s-5 col-3' id='log-sign-frm'>
-			<button class="col-t-5" id='sign-btn'>Sign up</button>
-			<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
+	<header class="clearfix">
+		<div id='header-main' class='col-t-12 col-s-12 col-12'>
+			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
+			<img class="col-s-2 col-3" id='logo' src="images/logo.png">
+			<h2 class='col-s-5 col-6' id='head-title'>Travelust</h2>
+			<nav class='col-s-5 col-3' id='log-sign-frm'>
+				<button class="col-t-5" id='sign-btn'>Sign up</button>
+				<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
+			</nav>
+		</div>
+		<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
+			<a href="index.html">Home</a>
+			<a href="about_us.html">About</a>
+			<a href="last_experiences.html">Experiences</a>
+			<a href="plan.html">Plan</a>
+			<a href="top_users.html">Top users</a>
+			<nav id='log-sign-in-menu'>
+				<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
+				<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
+			</nav>
 		</nav>
-	</div>
-	<nav class='col-s-5 col-t-9 col-7' id='nav-header-menu'>
-		<a href="index.html">Home</a>
-		<a href="about_us.html">About</a>
-		<a href="last_experiences.html">Experiences</a>
-		<a href="plan.html">Plan</a>
-		<a href="top_users.html">Top users</a>
-		<nav id='log-sign-in-menu'>
-			<button class="col-s-5" id='sign-in-menu-btn'>Sign up</button>
-			<button class="col-s-5" id='log-in-menu-btn'>Log in</button>
+		<nav id='search-bar' class='col-t-3 col-4'>
+			<input type="text" id='search-input' name="search-input">
+			<img id='search-lupa' src="images/search_lupa.png">
 		</nav>
-	</nav>
-	<nav id='search-bar' class='col-t-3 col-4'>
-		<input type="text" id='search-input' name="search-input">
-		<img id='search-lupa' src="images/search_lupa.png">
-	</nav>
-</header>
-<!-- ----------END HEADER----------- -->
+	</header>
+	<ul id="myList" class="col-4">
+		<li><a href="last_experiences.html">Experiences</a></li>
+		<li><a href="top_users.html">Users</a></li>
+		<li><a href="experience_bali.html">Sacred monkey forest, Bali</a></li>
+		<li><a href="experience_prague.html">City tour, Prague</a></li>
+		<li><a href="experience_cies.html">Trip to Cies islands, Vigo</a></li>
+		<li><a href="about_us.html">About us</a></li>
+		<li><a href="privacy_policy.html">Privacy policy, terms, conditions</a></li>
+		<li><a href="index.html">Home, main page</a></li>
+		<li><a href="index.html">Map</a></li>
+		<li><a href="plan.html">Plan a trip</a></li>
+	</ul>
+	<!-- ----------END HEADER----------- -->
 
 <!-- ----------POP UPS----------- -->
 <div id="main">
