--- a/experience_prague.html
+++ b/experience_prague.html
@@ -211,7 +211,7 @@
         		</div>
         		<div id='like-frm' class='col-s-2'>
         			<h4>14</h4>
-        			<img id="like-img" src="images/like.png" alt="like heart">
+        			<img id="like-img" src="images/like_sin_dar.png" alt="like heart">
         		</div>
         	</article>
         	<button id="see-comments" class="col-s-6 col-t-4 col-3">See comments</button>
