--- a/experience_cies.html
+++ b/experience_cies.html
@@ -136,7 +136,7 @@
 				<h3>Log in</h3>
 				<button type="button" name="exit" class="exit-button">x</button>
 			</div>
-			<p>Please, log in to comment.</p>
+			<p>Please, log in to comment or like.</p>
 			<div id="please-btns">
 				<button class="col-s-6 please-btn" id='sign-please-btn'>Sign up</button>
 				<button class="col-s-6 please-btn" id='log-please-btn'>Log in</button>
