--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<img src="images/default_pfp.png" alt="current picture" class="col-s-6">
 					<input type="file" id="hidden" class="input-sign" name="change picture">
 					<label for="hidden" id="input-label">Select picture</label>
-					<label for="interest">Interests</label>
+					<!--<label for="interest">Interests</label>
 					<div id="interests-remove">
 						<div class="interest-to-choose" id="default-interest">
 							<p>Interest 1</p>
@@ -104,6 +104,7 @@
 							<option value="religious">Religious</option>
 						</select>
 						<button id="interest-btn">Add interest</button>
+					-->
 					</form>
 				</div>
 			</form>
