--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
 			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
 			<img class="col-s-2 col-3" id='logo' src="images/logo.png">
 			<h2 class='col-s-5 col-6' id='head-title'>Travelust</h2>
-			<nav class='col-s-5 col-3' id='log-sign-frm'>
-				<div id="main-bts">
+			<nav class='col-s-5 col-4' id='log-sign-frm'>
+				<div id="main-bts" class="col-s-12">
 					<button class="col-t-5" id='sign-btn'>Sign up</button>
 					<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
 				</div>
-				<div id="registered-bts">
-					<img src="images/email%201.png">
-					<p class="col-s-8" id="username_show"></p>
-					<img src="images/user.png">
-					<button class="col-t-5" id='profile-btn'>Profile</button>
-					<button class="col-s-10 col-t-5" id='log-out-btn'>Log out</button>
+				<div id="registered-bts" class="col-s-12">
+					<!-- <img src="images/email%201.png"> -->
+					<div class="col-s-5 col-3">
+						<p class="col-s-8" id="username_show"></p>
+						<img src="images/user.png">
+					</div>
+					<div class="col-s-5 col-9">
+						<button class="col-s-12 col-5" id='profile-btn'>Profile</button>
+						<button class="col-s-12 col-5" id='log-out-btn'>Log out</button>
+					</div>
 				</div>
 			</nav>
 		</div>
@@ -140,7 +144,6 @@
 		<!-- ----------END LOG IN----------- -->
 	</div>
 	<div id="registered">
-
 		<article class="popup col-s-6" id="logout-popup">
 			<div class="title-exit">
 				<h3>Log out</h3>
