messages en todas

--- a/my_exp.html
+++ b/my_exp.html
@@ -102,7 +102,7 @@
 		<p class="question">Are you sure you want to delete this experience?</p>
 		<form class="yes-no col-s-11 col-t-11 col-11">
 			<button type="button" name="no-exp" id="no-but-exp" class="submit-but col-s-3 col-t-3 col-3">No</button>
-			<button type="submit" name="yes-exp" id="yes-exp" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
+			<button type="button" name="yes-exp" id="yes-exp" class="submit-but col-s-3 col-t-3 col-3" onclick="deleteExp(this)">Yes</button>
 		</form>
 	</article>
 
@@ -114,7 +114,7 @@
 		<p class="question">Are you sure you want to delete this collection?</p>
 		<form class="yes-no col-s-11 col-t-11 col-11">
 			<button type="button" name="no-coll" id="no-but-coll" class="submit-but col-s-3 col-t-3 col-3">No</button>
-			<button type="submit" name="yes-coll" id="yes-col" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
+			<button type="button" name="yes-coll" id="yes-col" class="submit-but col-s-3 col-t-3 col-3">Yes</button>
 		</form>
 	</article>
 
