--- a/about_us.html
+++ b/about_us.html
@@ -153,6 +153,54 @@
             </div>
         </article>
     </div>
+
+    <!-- ---------- MESSAGES -------- -->
+
+  	<article class="popup col-s-11" id="messages-popup">
+  		<div class="title-exit">
+  			<h3>Messaging</h3>
+  			<button type="button" name="exit" class="exit-button">x</button>
+  		</div>
+  		<div id="inside-messages">
+  			<div id="your-chats" class="col-s-11 col-t-11 col-3">
+  	      <h3>Your chats</h3>
+  	      <div id="chats" class="">
+  	        <article class="chat-person" id="default-person">
+  	          <p class="date-chat" id="date-chat">Default date</p>
+  	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+  	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
+  	        </article>
+  	        <article class="chat-person" id="selected-chat">
+  	          <p class="date-chat" id="date-chat">Default date</p>
+  	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+  	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
+  	        </article>
+  	      </div>
+  	    </div>
+  	    <div id="chat" class="col-s-11 col-t-11 col-8">
+  	      <div id="title-chat">
+  	        <h3 id="main-chat">Default name</h3>
+  	        <img id="profile-chat" src="images/default_pfp.png" alt="default picture">
+  	      </div>
+  	      <hr id="horizontal">
+  	      <div id="in-messages">
+  	        <div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
+  	          <p class="message-date-small" id="message-date">Default date</p>
+  	          <p class="message-text">Default Message</p>
+  	        </div>
+  	        <div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
+  	          <p class="message-date-small" id="message-date">Default date</p>
+  	          <p class="message-text">Default Message</p>
+  	        </div>
+  	      </div>
+  	      <div class="col-s-9 comment-frm">
+  	        <input type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
+  	        <img class="send-btn" src="images/send.png" alt="send message">
+  	      </div>
+  	    </div>
+  		</div>
+  	</article>
+
     <!-- ---------- END POP UPS----------- -->
 
     <section class="clearfix_about">
