--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<button class="col-s-10 col-t-5" id='log-btn'>Log in</button>
 				</div>
 				<div id="registered-bts" class="col-s-12">
-					<img src="images/email%201.png" class="image_message">
+					<img src="images/email%201.png" class="image_message" id="image_mes">
 					<div class="col-s-5 col-4">
 						<p class="col-s-8 text_username" id="username_show"></p>
 						<img src="images/user.png">
